[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["suseendar1414 <suseendarannair@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
plotly = "^5.19.0"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
